chore: enhance the monitoring for xtenantapp and refactor to friendly UI
